bind prepare agent to test phase.

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,7 @@
                         <executions>
                             <execution>
                                 <id>pre-unit-test</id>
+                                <phase>test-compile</phase>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
